test/files/invalid/unknown_type.stderr
error: Unknown type
  ┌─ test/files/invalid/unknown_type.fbs:2:8
  │
2 │   foo: hello;
  │        ^^^^^

Error: Bailing because of errors
